Improve BibEntries for test (more confirming to BibTeX)